--- a/src/components/UI/Header/Header.module.scss
+++ b/src/components/UI/Header/Header.module.scss
@@ -16,8 +16,8 @@
             }
         }
 
-        & > p {
-            margin-top: 0.3rem;
+        & > h5 {
+            margin-top: 0.2rem;
             margin-left: 0.25rem;
         }
     }
