--- a/src/pages/Cart/Cart.module.scss
+++ b/src/pages/Cart/Cart.module.scss
@@ -16,8 +16,8 @@
     & > ul {
         grid-area: products;
 
-        & > li {
-            margin-bottom: 0.35rem;
+        & > div {
+            margin-bottom: 0.75rem;
         }
     }
 
