--- a/src/components/Products/ProductCard/CartProductCard/CartProductCard.module.scss
+++ b/src/components/Products/ProductCard/CartProductCard/CartProductCard.module.scss
@@ -3,77 +3,52 @@
     display: flex;
     align-items: center;
     padding: 1rem;
-    border: 1px solid #e3f4fd;
-    background-color: #f7fcff;
-    border-radius: 4px;
 
     & > .main {
+        display: flex;
+        align-items: center;
+        width: 100%;
         flex-grow: 1;
 
         & > img {
-            display: block;
             width: 5rem;
             height: 4rem;
-            object-fit: cover;
         }
 
-        & > span {
-            white-space: nowrap;
-            margin-left: 0.5rem;
-            font-size: 0.9rem;
-            font-weight: 500;
+        & > a,
+        .computer {
+            flex-grow: 1;
+            text-align: start !important;
         }
 
-        & > a {
-            font-size: 0.9rem;
-            color: #2d86ff;
-            padding: 0 0.75rem;
-        }
-
-        & > p {
-            font-size: 0.9rem;
-            color: #2e425a;
-            padding: 0 0.75rem;
-            font-weight: 500;
+        & > .computer {
+            font-size: 1rem;
         }
     }
 
-    & > div {
+    & > .actionArea {
         display: flex;
         align-items: center;
         margin-top: 0.2rem;
 
-        & > h4 {
-            color: #2e425a;
-            height: fit-content;
+        & > h6 {
+            font-size: 1rem;
         }
 
         & > div {
-            margin: 0 1rem;
-            color: #2e425a;
             display: flex;
-
-            & span:first-of-type {
-                font-size: 0.9rem;
-                font-weight: 500;
-            }
-
-            & span:last-of-type {
-                font-weight: 500;
-            }
+            align-items: center;
+            margin: 0 1rem;
 
             & > button {
-                border: none;
-                background-color: transparent;
-                color: #2e425a;
-
-                &:disabled {
-                    opacity: 0.5;
-                }
-
+                padding: 0.5rem;
                 & svg {
                     font-size: 1rem;
                 }
+            }
+
+            & > h6 {
+                margin-top: 0.1rem;
             }
         }
     }
