--- a/src/components/Products/ProductCard/CheckoutProductCard/CheckoutProductCard.module.scss
+++ b/src/components/Products/ProductCard/CheckoutProductCard/CheckoutProductCard.module.scss
@@ -3,7 +3,6 @@
     display: flex;
     align-items: center;
     padding: 1rem;
-    border: 1px solid #e3f4fd;
 
     & > img {
         display: block;
@@ -12,29 +11,27 @@
         object-fit: cover;
     }
 
-    & > span {
-        white-space: nowrap;
-        margin-left: 0.5rem;
-        font-size: 0.9rem;
-        font-weight: 500;
-    }
+    & > div {
+        padding: 0 !important;
+        width: 100%;
 
-    & > a {
-        font-size: 0.9rem;
-        color: #2d86ff;
-        padding: 0 0.75rem;
-        flex-grow: 1;
-    }
+        display: flex;
+        align-items: center;
 
-    & > p {
-        font-size: 0.9rem;
-        color: #2e425a;
-        padding: 0 0.75rem;
-        flex-grow: 1;
-    }
+        & > p:first-of-type {
+            white-space: nowrap;
+            width: fit-content !important;
+        }
 
-    & > h4 {
-        color: #2e425a;
-        height: fit-content;
+        & > a,
+        .computer {
+            margin-left: 0.2rem;
+            flex-grow: 1;
+            text-align: start !important;
+        }
+
+        & > .computer {
+            font-size: 1rem;
+        }
     }
 }
