--- a/src/components/Products/ProductFilters/PriceFilter/PriceFilter.module.scss
+++ b/src/components/Products/ProductFilters/PriceFilter/PriceFilter.module.scss
@@ -1,43 +1,56 @@
 .root {
-    padding: 0.75rem 0 0.4rem 0;
-    border: 2px solid #e3f4fd;
-    background-color: #f7fcff;
-    border-radius: 4px;
+    margin-bottom: 1rem;
 
     & > div:first-of-type {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 0.25rem;
-        padding: 0 0 0 1rem;
-        & > p {
-            color: #2e425a;
-            font-size: 0.9rem;
-            font-weight: 500;
+        padding: 0.75rem 0.75rem 0 0.75rem !important;
+
+        & > h6 {
+            position: relative;
+
+            display: flex;
+            align-items: center;
+
+            & > button {
+                position: absolute;
+
+                right: 0;
+
+                padding: 0.25rem;
+                margin-bottom: 0.1rem;
+
+                opacity: 0.9;
+
+                & svg {
+                    color: rgba(0, 0, 0, 0.87) !important;
+
+                    transition: 125ms;
+
+                    font-size: 1.1rem;
+                }
+            }
         }
+    }
 
-        & > button {
-            border: none;
-            padding: 0 1rem;
-            margin: 0;
-            background-color: transparent;
+    & > ul {
+        & > label {
+            display: flex;
+            align-items: center;
 
-            & > svg {
-                color: #2e425a;
-                margin-top: 0.1rem;
-                transition: 100ms;
-                font-size: 1rem;
+            & > span {
+                font-size: 0.9rem;
+                padding: 0.25rem !important;
             }
         }
     }
 
     & > .Content {
-        padding: 0.5rem 1rem 0.75rem;
+        padding: 0 1rem;
+        margin-bottom: 0.5rem;
         display: flex;
         flex-flow: column;
 
         & > button {
-            margin-top: 0.5rem;
+            margin: 0.5rem 0;
         }
     }
 }
