--- a/src/components/Products/ProductList/ProductList.module.scss
+++ b/src/components/Products/ProductList/ProductList.module.scss
@@ -1,21 +1,20 @@
 .root {
     grid-area: products;
 
-    width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
     justify-items: center;
     row-gap: 1rem;
     column-gap: 0.5rem;
     height: fit-content;
-
-    & > li {
-        width: 100%;
-    }
 }
 
 @media (max-width: 540px) {
     .root {
         grid-template-columns: 1fr;
+
+        & > li {
+            width: 100%;
+        }
     }
 }
