--- a/src/components/Checkout/OrderSummary/OrderSummary.module.scss
+++ b/src/components/Checkout/OrderSummary/OrderSummary.module.scss
@@ -1,45 +1,24 @@
 .orderLabel {
     grid-area: order-label;
     margin-top: 2rem;
-    font-size: 0.9rem;
-    margin-bottom: 0.2rem;
-    margin-left: 0.2rem;
-    color: #4a617c;
 }
 
 .root {
     grid-area: products;
-    color: #2e425a;
-    border: 1px solid #e3f4fd;
-    border-radius: 4px;
 
-    & > li:first-of-type {
-        border-top-left-radius: 4px;
-        border-top-right-radius: 4px;
-    }
-
-    & > li:last-of-type {
-        border-bottom-left-radius: 4px;
-        border-bottom-right-radius: 4px;
-    }
-
-    & > li:nth-child(odd) {
-        background-color: #f7fcff;
+    & > div {
+        border: none !important;
     }
 
     & > .total {
         padding: 1rem;
-        border: 1px solid #e3f4fd;
 
-        background-color: #f7fcff;
         display: flex;
         align-items: center;
         justify-content: space-between;
 
-        & > span {
-            font-weight: 500;
-            font-size: 0.95rem;
-            flex-grow: 1;
+        & > p {
+            font-weight: 500 !important;
         }
     }
 }
