--- a/src/index.scss
+++ b/src/index.scss
@@ -57,19 +57,23 @@ button {
 }
 
 .StripeElement {
-    border: 1px solid #c8dce6;
+    border: 1px solid rgba(0, 0, 0, 0.23);
     border-radius: 4px;
-    padding: 0.6rem;
+    padding: 18.5px 14px;
     background-color: white;
 
     &--focus {
-        border-color: #6ea7ec;
-        box-shadow: 0 0 0 1px #6ea7ec;
+        border-color: #1e88e5 !important;
+        box-shadow: 0 0 0 1px #1e88e5;
     }
 
     &--invalid {
-        border-color: red;
-        box-shadow: 0 0 0 0;
+        border-color: #f44336 !important;
+        box-shadow: 0 0 0 0 !important;
+    }
+
+    &:hover {
+        border-color: rgba(0, 0, 0, 0.57);
     }
 }
 
