--- a/src/pages/Checkout/Checkout.module.scss
+++ b/src/pages/Checkout/Checkout.module.scss
@@ -5,7 +5,7 @@
 
     grid-template-areas:
         'header header'
-        'shipping-address-label .'
+        'shipping-address-label card-information'
         'shipping-address side';
 
     margin-bottom: 1rem;
@@ -14,24 +14,18 @@
         margin: 2rem 0 2rem;
     }
 
-    & > label {
-        font-size: 0.9rem;
-        margin-bottom: 0.2rem;
-        margin-left: 0.2rem;
-        color: #4a617c;
-    }
-
     & > .shippingAddressLabel {
         grid-area: shipping-address-label;
+    }
+
+    & > .cardInformation {
+        grid-area: card-information;
     }
 
     & > div:last-of-type {
         grid-area: shipping-address;
         display: flex;
         flex-direction: column;
-        border-radius: 4px;
-        border: 2px solid #e3f4fd;
-        background-color: #f7fcff;
         padding: 1rem 2rem 2rem;
         height: fit-content;
 
