--- a/src/components/Cart/CartSideBar/CartSideBar.module.scss
+++ b/src/components/Cart/CartSideBar/CartSideBar.module.scss
@@ -41,10 +41,14 @@
     }
 }
 
+@media (max-width: 800px) {
+    .root {
+        margin-bottom: 0;
+    }
+}
+
 @media (max-width: 540px) {
     .root {
-        margin-top: 2rem;
-
         & .price p {
             font-size: 1.4rem;
         }
@@ -53,7 +57,6 @@
 
 @media (max-width: 480px) {
     .root {
-        margin-top: 2rem;
         display: block;
 
         & > .action {
