--- a/src/components/Checkout/CreateShippingAddressForm/CreateShippingAddressForm.module.scss
+++ b/src/components/Checkout/CreateShippingAddressForm/CreateShippingAddressForm.module.scss
@@ -1,60 +1,46 @@
 .root {
-    margin-left: 1.5rem;
-    max-width: 20rem;
+    max-width: 25rem;
 
-    & > label {
-        margin-top: 1rem;
-    }
-
-    & > input {
-        max-width: 20rem;
-        width: 100%;
-    }
-
-    & > textarea {
-        max-width: 32rem;
-        width: 100%;
-        min-height: 5rem;
-        padding: 0.6rem;
-        font-size: 1rem;
-        border: 1px solid #c8dce6;
-        color: #18293c;
-        border-radius: 4px;
-        resize: vertical;
-        flex-grow: 1;
-
-        &:focus {
-            border-color: #6ea7ec;
-            box-shadow: 0 0 0 1px #6ea7ec;
-        }
-    }
+    padding: 2rem;
 
     & > button {
-        margin-top: 1rem;
+        margin-top: 1.5rem !important;
     }
 
-    & > select {
-        max-width: 20rem;
-        width: 100%;
-        padding: 0.6rem;
-        font-size: 1rem;
-        background-color: white;
-        border: 1px solid #c8dce6;
-        color: #18293c !important;
-        border-radius: 4px;
+    & h5 {
+        margin-bottom: 1rem;
+    }
 
-        &::placeholder {
-            font-size: 0.5rem;
-        }
-
-        &:focus {
-            border-color: #6ea7ec;
-            box-shadow: 0 0 0 1px #6ea7ec;
-        }
+    & > .actions {
+        margin-top: 1.5rem;
+        display: flex;
+        align-items: center;
+        gap: 1.5rem;
     }
 }
 
 .Input {
     background: white;
-    margin-top: 1rem !important;
+    margin-top: 1.5rem !important;
+}
+
+@media (max-width: 800px) {
+    .root {
+        padding: 1rem !important;
+        margin: auto;
+
+        & h5 {
+            margin-top: 0;
+            margin-bottom: 0.5rem;
+        }
+
+        & > .actions {
+            margin-top: 1rem;
+            gap: 1rem;
+        }
+
+        .Input {
+            margin-top: 1rem !important;
+        }
+    }
 }
