--- a/src/components/Checkout/ShippingAddressCard/ShippingAddressCard.module.scss
+++ b/src/components/Checkout/ShippingAddressCard/ShippingAddressCard.module.scss
@@ -1,23 +1,9 @@
 .root {
     display: flex;
     align-items: center;
-    padding: 1rem;
+    padding: 1rem 1rem 1rem 2rem;
 
-    & > div {
-        margin-left: 1rem;
-
-        & > label {
-            cursor: pointer;
-            font-weight: 500;
-            margin-bottom: 0.4rem;
-            display: block;
-            color: #2e425a;
-        }
-
-        & > p {
-            font-size: 0.9rem;
-            font-weight: 500;
-            color: #9ea9b7;
-        }
+    & .content {
+        margin-left: 0.5rem;
     }
 }
