--- a/src/components/Products/ProductTable/index.module.scss
+++ b/src/components/Products/ProductTable/index.module.scss
@@ -1,37 +1,24 @@
 .root {
     width: 100%;
-    border: 1px solid #e3f4fd;
-    text-align: left;
-    border-collapse: collapse;
-    table-layout: auto;
     margin-bottom: 4rem;
-    border-radius: 4px;
-    border-style: hidden;
-    box-shadow: 0 0 0 2px #e3f4fd;
+    border-bottom: none !important;
 
-    & tr {
-        border: 1px solid #e3f4fd;
+    & h6 {
+        width: fit-content !important;
     }
 
     & tr:nth-child(odd) {
-        background-color: #f7fcff;
-        box-shadow: 0 0 0 1px #e3f4fd;
+        background: rgba(30, 136, 229, 0.06) !important;
     }
 
-    & th,
-    & td {
-        padding: 0.75rem 1rem;
-        color: #2e425a;
-        font-size: 0.85rem;
-    }
+    & tr {
+        & td:first-of-type {
+            width: 15% !important;
+        }
 
-    & th {
-        text-align: left;
-        width: 15%;
-    }
-
-    & td {
-        font-weight: 400;
+        & td:last-of-type {
+            width: 85% !important;
+        }
     }
 
     & svg {
@@ -40,36 +27,40 @@
 }
 
 @media (max-width: 1400px) {
-    .root th {
-        width: 22.5%;
-    }
-}
-
-@media (max-width: 750px) {
     .root {
-        & td {
-            padding-top: 2.25rem;
-        }
+        & tr {
+            & td:first-of-type {
+                width: 25% !important;
+            }
 
-        & th {
-            white-space: nowrap;
-
-            position: absolute;
-            left: 1rem;
+            & td:last-of-type {
+                width: 75% !important;
+            }
         }
     }
 }
 
-@media (max-width: 540px) {
+@media (max-width: 800px) {
     .root {
-        & td {
-            padding-top: 1.9rem;
+        margin-bottom: 1rem;
+        & tr {
+            & td:first-of-type {
+                width: 0% !important;
+                position: relative;
+                padding: 0 0 0 1rem !important;
 
-            font-size: 0.85rem;
-        }
+                & h6 {
+                    position: absolute;
+                    white-space: nowrap;
+                    top: 1rem;
+                }
+            }
 
-        & th {
-            font-size: 0.85rem;
+            & td:last-of-type {
+                padding-top: 2.5rem;
+                padding-left: 0;
+                width: 100% !important;
+            }
         }
     }
 }
