--- a/src/components/UI/HeroSection/HeroSection.module.scss
+++ b/src/components/UI/HeroSection/HeroSection.module.scss
@@ -1,12 +1,98 @@
 .root {
-    padding: 8rem 0;
-    & > h1 {
-        font-size: 4rem;
-        margin-bottom: 2rem;
+    height: 800px;
+    position: relative;
+    display: flex;
+    align-items: center;
+
+    & h2 {
+        font-weight: 400;
     }
 
-    & > button {
+    & p {
+        max-width: 700px;
+        margin: 2.5rem 0;
+    }
+
+    & button {
         width: fit-content;
-        padding: 1rem 1.5rem;
+        margin-right: 2rem;
+        margin-bottom: 2rem;
+    }
+}
+
+.image {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+    z-index: -10;
+}
+
+@media (max-width: 1130px) {
+    .root {
+        & img {
+            width: 500px;
+        }
+    }
+}
+
+@media (max-width: 1050px) {
+    .root {
+        height: auto;
+        padding: 5.5rem 0;
+        & > div {
+            margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            & > h3,
+            & > p {
+                max-width: 500px !important;
+                width: 100%;
+                text-align: center;
+            }
+
+            & > div {
+                margin: 0 auto;
+                justify-content: center;
+
+                & > button:last-of-type {
+                    margin-right: 0;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 520px) {
+    .root {
+        padding: 4rem 0;
+
+        & > div {
+            & h4 {
+                text-align: center;
+            }
+
+            & p {
+                margin: 2rem auto;
+            }
+            & > div {
+                flex-direction: column;
+                & button {
+                    margin-right: 0;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 350px) {
+    .root {
+        padding: 3rem 0;
     }
 }
