--- a/src/components/UI/Search/SearchInput.module.scss
+++ b/src/components/UI/Search/SearchInput.module.scss
@@ -41,6 +41,17 @@
         left: 0;
         right: 0;
         border-radius: 4px;
+        z-index: 1400;
+
+        & > div {
+            border: none !important;
+        }
+
+        & > li {
+            & > div {
+                border: none !important;
+            }
+        }
     }
 }
 
@@ -48,6 +59,10 @@
     padding: 0.75rem !important;
 
     text-align: center;
+}
+
+.backdrop {
+    z-index: 1300 !important;
 }
 
 .spinner {
