--- a/src/pages/Products/Products.module.scss
+++ b/src/pages/Products/Products.module.scss
@@ -1,17 +1,14 @@
 .root {
     display: grid;
     grid-template-columns: 250px auto;
-    gap: 1rem;
+    column-gap: 1rem;
+    row-gap: 0.3rem;
 
     grid-template-areas:
         'header header'
         'filters content';
 
     margin-bottom: 1rem;
-
-    & > div:first-of-type {
-        margin: 1rem 0;
-    }
 
     & > div:last-of-type {
         grid-area: content;
@@ -20,13 +17,15 @@
 
 @media (max-width: 800px) {
     .root {
+        row-gap: 1rem;
+
         grid-template-columns: 1fr;
         grid-template-areas:
             'header'
             'filters'
             'content';
 
-        & > h3 {
+        & > div {
             margin: 0;
         }
     }
