--- a/src/pages/SearchResult/SearchResult.module.scss
+++ b/src/pages/SearchResult/SearchResult.module.scss
@@ -1,7 +1,8 @@
 .root {
     display: grid;
     grid-template-columns: auto;
-    gap: 1rem;
+    column-gap: 1rem;
+    row-gap: 1.3rem;
 
     grid-template-areas:
         'header'
@@ -10,7 +11,7 @@
     margin-bottom: 1rem;
 
     & > div:first-of-type {
-        margin: 1rem 0;
+        margin-bottom: 1rem;
     }
 
     & > div:last-of-type {
