--- a/src/pages/SignIn/SignIn.module.scss
+++ b/src/pages/SignIn/SignIn.module.scss
@@ -1,8 +1,8 @@
 .root {
     display: flex;
     flex-direction: column;
-    max-width: 28rem;
-    padding: 1rem;
+    max-width: 26rem;
+    padding: 0;
     margin: 2rem auto 0;
 
     & > button {
@@ -31,14 +31,7 @@
 
 @media (max-width: 540px) {
     .root {
-        border: none;
-        background-color: transparent;
         padding: 0;
-        margin-top: 0;
-
-        & > p {
-            font-size: 0.7rem;
-        }
     }
 }
 
