--- a/src/components/Products/ProductCard/CheckoutProductCard/CheckoutProductCard.module.scss
+++ b/src/components/Products/ProductCard/CheckoutProductCard/CheckoutProductCard.module.scss
@@ -3,12 +3,14 @@
     display: flex;
     align-items: center;
     padding: 1rem;
+    border: none !important;
 
     & > img {
         display: block;
         width: 5rem;
         height: 4rem;
         object-fit: cover;
+        margin-right: 0.3rem;
     }
 
     & > div {
