--- a/src/pages/Builder/Builder.module.scss
+++ b/src/pages/Builder/Builder.module.scss
@@ -1,6 +1,91 @@
 .root {
-    & > button:last-of-type {
-        max-width: 30rem;
-        margin-top: 2rem;
+    display: grid;
+    grid-template-columns: auto 23rem;
+    column-gap: 3.3rem;
+
+    grid-template-areas:
+        'header header'
+        'main-label side-label'
+        'main side';
+
+    margin-bottom: 1rem;
+}
+
+.MainLabel {
+    grid-area: main-label !important;
+}
+
+.Main {
+    grid-area: main !important;
+
+    & > div {
+        padding: 1.5rem !important;
+        padding-top: 1.6rem !important;
+        transition: width 2s;
+
+        & > :first-child {
+            margin-top: 0;
+        }
+    }
+}
+
+.SideLabel {
+    grid-area: side-label !important;
+}
+
+.Side {
+    grid-area: side !important;
+    height: fit-content;
+
+    & > div {
+        padding: 1rem !important;
+
+        & > button:last-of-type {
+            margin-top: 1.5rem;
+        }
+    }
+}
+
+.Total {
+    padding: 1rem !important;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    & > p {
+        font-weight: 500 !important;
+    }
+}
+
+.Buttons {
+    margin-top: 1.5rem;
+    display: flex;
+    column-gap: 1.5rem;
+}
+
+.Gpu {
+    margin-top: 0.75rem;
+    margin-bottom: -0.75rem;
+
+    & > div {
+        margin-top: 0.75rem;
+        margin-bottom: 2.25rem !important;
+    }
+}
+
+.Actions {
+    display: flex;
+    align-items: center;
+    margin-bottom: -1.25rem !important ;
+    margin-top: -0.25rem;
+
+    & > button {
+        padding: 0.5rem;
+        margin: 0 -0.2rem;
+
+        & svg {
+            font-size: 1rem;
+        }
     }
 }
