--- a/src/components/Layout/Footer/Footer.module.scss
+++ b/src/components/Layout/Footer/Footer.module.scss
@@ -1,8 +1,129 @@
-footer {
+.root {
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
     height: 4rem;
-    background-color: #2573c1;
+    background: #4898df;
+    color: white;
+
+    & > div {
+        padding-top: 1.25rem;
+        padding-bottom: 1.25rem;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        & > div {
+            display: flex;
+            column-gap: 0.5rem;
+            align-items: center;
+
+            & > div {
+                & > a {
+                    color: white;
+                    width: 2rem;
+                    height: 2rem;
+                    display: flex;
+                    align-items: center;
+                    border-radius: 4px;
+                    transition: width 500ms;
+                    overflow: hidden;
+
+                    &::after {
+                        box-sizing: border-box;
+                        font-weight: bold;
+                        width: 0px;
+                    }
+                }
+
+                & > .Facebook {
+                    background-color: #3b5998;
+                    &::after {
+                        content: 'Facebook';
+                        margin-left: 0.5rem;
+                    }
+                    &:hover {
+                        width: 115px;
+                    }
+
+                    & svg {
+                        margin-left: 0.5rem;
+                    }
+                }
+
+                & > .Github {
+                    background-color: #24292e;
+
+                    &::after {
+                        content: 'GitHub';
+                        margin-left: 0.5rem;
+                    }
+
+                    &:hover {
+                        width: 95px;
+                    }
+
+                    & svg {
+                        margin-left: 0.45rem;
+                        min-width: 1.1rem;
+                        min-height: 1.1rem;
+                    }
+                }
+
+                & > .Linkedin {
+                    background-color: #0072b1;
+
+                    &::after {
+                        content: 'LinkedIn';
+                        margin-left: 0.5rem;
+                    }
+
+                    &:hover {
+                        width: 105px;
+                    }
+
+                    & svg {
+                        margin-left: 0.5rem;
+                    }
+                }
+
+                & > .Instagram {
+                    background: linear-gradient(
+                        45deg,
+                        #405de6,
+                        #5851db,
+                        #833ab4,
+                        #c13584,
+                        #e1306c,
+                        #fd1d1d
+                    );
+
+                    &::after {
+                        content: 'Instagram';
+                        margin-left: 0.5rem;
+                    }
+
+                    &:hover {
+                        width: 120px;
+                    }
+
+                    & svg {
+                        margin-left: 0.35rem;
+                        min-width: 1.3rem;
+                        min-height: 1.3rem;
+                    }
+                }
+            }
+        }
+
+        & > p {
+            & svg {
+                font-size: 0.75rem;
+                margin-right: 0.1rem;
+                margin-bottom: 0.15rem;
+            }
+        }
+    }
 }
