--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@ body {
 
 #root {
     position: relative;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 *,
@@ -87,4 +87,10 @@ button {
     & svg {
         font-size: 1.3rem !important;
     }
+}
+
+a {
+    display: block;
+    color: white;
+    text-decoration: none;
 }
